ros2_ws/log/build_2025-03-21_11-12-44/senal_detector/stderr.log
  File "/home/crofi/ros2_ws/install/senal_detector/lib/python3.10/site-packages/senal_detector/senal_detector.py", line 68
    print("Hay descriptores de la imagen)
          ^
SyntaxError: unterminated string literal (detected at line 68)

